--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
 
   <body>
-    <!-- Header Section -->
+    <!-- Header -->
     <header>
       <h1>Blaze's Portfolio</h1>
-      <!-- Start of Navigation -->
+      <!-- Start of Nav Bar -->
       <nav>
         <ul>
           <li>
-            <a href="#about-me">About Me</a>
+            <a href="#fgabout-me">About Me</a>
           </li>
           <li>
             <a href="#work">Work</a>
@@ -29,16 +29,16 @@
         </ul>
       </nav>
     </header>
-    <!-- End of Navigation Section -->
-    <!-- End of Header Section -->
+    <!-- End of Nav Bar-->
+    <!-- End of Header -->
 
-    <!-- Start of Hero Section -->
+    <!-- Start of Hero -->
     <section class="hero">
-        <h2>Full-Stack Website Development Student</h2>
+        <h2>UNC Bootcamp Student</h2>
     </section>
-    <!-- End of Hero Section -->
+    <!-- End of Hero -->
 
-    <!-- Start of "About Me" Section -->
+    <!-- Start of "About Me"  -->
     <section id="about-me" class="section">
         <!-- Section Title -->
         <div class="section-title">
@@ -54,9 +54,9 @@
             </p>
         </div>
     </section>
-    <!-- End of "About Me" Section -->
+    <!-- End of "About Me"  -->
 
-    <!-- Start of "Work" Section -->
+    <!-- Start of "Work" -->
     <section id="work" class="section">
         <!-- Section Title -->
         <div class="section-title2">
@@ -98,9 +98,9 @@
             </div>
         </div>
       </section>
-    <!-- End of "Work" Section -->
+    <!-- End of "Work" -->
 
-    <!-- Start of "Contact Me" Section -->
+    <!-- Start of "Contact Me"  -->
     <section id="contact-me" class="section">
         <!-- Section Title -->
         <div class="section-title">
@@ -124,7 +124,7 @@
             </div>
       </div>
       </section>
-    <!-- End of "Contact Me" Section -->
+    <!-- End of "Contact Me"  -->
 
   </body>
 </html>
